taskatia/GKE/kubernetes/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - grafana.<DOMAIN>.com
    - prometheus.<DOMAIN>.com
    - app.<DOMAIN>.com
    secretName: observability-tls
  rules:
  - host: grafana.<DOMAIN>.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: prometheus.<DOMAIN>.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
  - host: app.<DOMAIN>.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microsim-frontend
            port:
              number: 8080
